@@ -1,4 +1,5 @@
 package App::PerlWatcher::Watcher::HTTP;
+# ABSTRACT: The base role for watching external events via HTTP
 
 use 5.12.0;
 use strict;
@@ -13,16 +14,57 @@ use List::MoreUtils qw/any/;
 use Moo::Role;
 use URI;
 
+=attr url
 
+The subclass should provide the watched URL
+
+=cut
 requires 'url';
+
+=method process_http_response
+
+The subclass should provide the process_http_response($body, $headers) method
+which is been called only on successfull responce (http code = 200)
+
+=cut
+
 requires 'process_http_response';
 
 with qw/App::PerlWatcher::Watcher/;
 
+=attr frequency
+
+The frequency of poll in seconds
+
+=cut
+
 has 'frequency'         => ( is => 'ro', default => sub { 60; } );
+
+# for internal use only. No docs.
 has 'uri'               => ( is => 'lazy');
+
+=attr timeout
+
+The http transaction timeout. Default value: 5 seconds
+
+=cut
+
 has 'timeout'           => ( is => 'lazy');
+
+=attr
+
+The watcher title
+
+=cut
+
 has 'title'             => ( is => 'lazy');
+
+=attr watcher_callback
+
+The callback, which will be called with status object
+
+=cut
+
 has 'watcher_callback'  => ( is => 'lazy');
 
 sub _build_uri {
@@ -74,7 +116,7 @@ sub _build_watcher_callback {
 sub start {
     my ($self, $callback) = @_;
     $self->callback($callback) if $callback;
-    
+
     $self->{_w} = AnyEvent->timer(
         after    => 0,
         interval => $self->frequency,
