@@ -1,4 +1,5 @@
 package App::PerlWatcher::Watcher::HTTPSimple;
+# ABSTRACT: The simple HTTP watcher, where actual http responce body is been processed by closure
 
 use 5.12.0;
 use strict;
@@ -10,8 +11,29 @@ use Devel::Comments;
 use Moo;
 use URI;
 
+=attr url
+
+The url been wached
+
+=cut
+
 has 'url'                   => ( is => 'ro', required => 1);
+
+=attr response_handler
+
+The callback, which is been called as response_handler($body), and
+which should return the body to be displayed as result.
+
+=cut
+
 has 'response_handler'      => ( is => 'ro', required => 1);
+
+=attr processed_response
+
+The last result, which is been stored after invocation of response_handler
+
+=cut
+
 has 'processed_response'    => ( is => 'rw');
 
 with qw/App::PerlWatcher::Watcher::HTTP/;
