@@ -1,4 +1,5 @@
 package App::PerlWatcher::Watcher::Weather;
+# ABSTRACT: Weather watches based around api.yr.no. Currenlty monitors only temperature and does no any notifications / level alerts.
 
 use 5.12.0;
 use strict;
@@ -16,8 +17,24 @@ our $T_UNITS = {
     celcius => 'C°',
 };
 
+=attr latitude
+
+The location latitude
+
+=cut
+
 has 'latitude'          => ( is => 'ro', required => 1);
+
+=attr longitude
+
+The location longitude
+
+=cut
+
 has 'longitude'         => ( is => 'ro', required => 1);
+
+# for internal usage
+
 has 'data'              => ( is => 'rw', default => sub{ {}; } );
 has 'url_generator'     => ( is => 'lazy');
 has 'url'               => ( is => 'lazy');
